--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             line-height: 1;
             font-family: 'Noto Sans TC', sans-serif;
         }
+        a {
+            text-decoration: none;
+        }
         header {
             background-color: rgba(0, 255, 21, 0.253);
         }
@@ -116,6 +119,40 @@
         .pb-8 {
             padding-bottom: 8px;
         }
+        .w-1\/4 {
+            width: 25%;
+        }
+        .fs-20 {
+            font-size: 20px;
+        }
+        .text-center {
+            text-align: center;
+        }
+        .card-shadow {
+            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+        }
+        .pb-12 {
+            padding-bottom: 12px;
+        }
+        .h-333 {
+            height: 333px;
+        }
+        .mxm-12 {
+            margin: -12px;
+        }
+        .over-text {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 4;
+        }
+        .br-14 {
+            border-radius: 14px;
+        }
+        .flex-wrap {
+            flex-wrap: wrap;
+        }
     </style>
 </head>
 <body>
@@ -147,7 +184,7 @@
         </div>
     </header>
     <section>
-        <img class="w-100" src="./assets/VRChat_1920x1080_2021-10-05_01-13-31.026.png">
+        <img class="w-100" src="./assets/gun/LINE_ALBUM_202389生存場_230814_8 1.png">
     </section>
     <section>
         <div class="container">
@@ -167,8 +204,96 @@
                             而大型場地叢林戰類型的，都是以大自然中的樹木、草叢為掩體 使用槍枝動力多為電動與瓦斯，少部分為氣壓。(氣壓狙擊槍居多，通常是一拉一發)<br><br>
                             
                             CO2動力的槍枝難以查驗初速，所以大多數場地與槍隊會禁止使用，下場至少需要穿戴最基本護具(護目鏡、護嘴) 槍枝動力皆要符合法規，且大多數場地的限制會比法規更低的動力，且距離過近不允許開槍，一切以安全為第一優先(畢竟大多數玩家都是想去體驗樂趣的，以不受傷為原則)<br> 
-                            法規於詳情可見，槍口動能二焦耳以下低動能遊戲用槍活動應注意事項。
+                            法規於詳情可見， <a href="https://www.rootlaw.com.tw/LawArticle.aspx?LawID=A040080131000700-1080704">槍口動能二焦耳以下低動能遊戲用槍活動應注意事項。</a>
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2 class="title">裝備介紹</h2>
+        <div class="container">
+            <div class="d-flex mxm-12 flex-wrap">
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14">
+                        <div>
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                        <div class="fs-20 over-text">衝鋒槍的特色：<br>
+                            射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14">
+                        <div>
+                            <img class="w-100" src="./assets/gun/HK-.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">步槍</div>
+                        <div class="fs-20 over-text">步槍的特色：<br>
+                            泛用型、適合中距離，亦可裝上各類瞄具，適合廣泛大眾使用。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14">
+                        <div>
+                            <img class="w-100" src="./assets/gun/SNIPE.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">狙擊槍</div>
+                        <div class="fs-20 over-text">狙擊槍的特色：<br>
+                            多為空氣動力、一拉一發、瞄準距離遠、不太適合新手使用。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14">
+                        <div>
+                            <img class="w-100" src="./assets/gun/shotgun.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">霰彈槍</div>
+                        <div class="fs-20 over-text">霰彈槍的特色：<br>
+                            一次可射出多發子彈、適合中距離使用，因為太遠容易瞄不準。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14 flex-wrap">
+                        <div>
+                            <img class="w-100" src="./assets/gun/edgel.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">手槍</div>
+                        <div class="fs-20 over-text">手槍的特色：<br>
+                            初速較低，所以多數場地限制一定距離內會要求切換手槍，適合短距離使用。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14 flex-wrap">
+                        <div>
+                            <img class="w-100" src="./assets/gun/rpg.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">RPG/投擲武器</div>
+                        <div class="fs-20 over-text">RPG/投擲武器特色：<br>
+                            場上不常見，多為娛樂效果使用，沒特別需要不建議購買。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14 flex-wrap">
+                        <div>
+                            <img class="w-100" src="./assets/gun/mod.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">瞄具</div>
+                        <div class="fs-20 over-text">瞄具使用：<br>
+                            種類繁多，常見有類紅點、步槍鏡、RMR...等，可依據槍枝種類選配。</div>
+                    </div>
+                </div>
+                <div class="w-1/4 px-12">
+                    <div class="card-shadow h-333 br-14 flex-wrap">
+                        <div>
+                            <img class="w-100" src="./assets/gun/vest.png" alt="">
+                        </div>
+                        <div class="fw-bloder fs-20 text-center pb-12">防具</div>
+                        <div class="fs-20 over-text">防具：<br>
+                            部分部位防具強制配戴(護目鏡、護嘴)，其餘選配。<br>
+                            部分防具有增加彈匣配戴數量，具減少疼痛感及攝影...</div>
                     </div>
                 </div>
             </div>
