--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         .pb-12 {
             padding-bottom: 12px;
         }
+        .pd-12 {
+            padding: 12px;
+        }
         .h-333 {
             height: 333px;
         }
@@ -245,17 +248,17 @@
                             多為空氣動力、一拉一發、瞄準距離遠、不太適合新手使用。</div>
                     </div>
                 </div>
-                <div class="w-1/4 px-12">
+                <div class="w-1/4 pd-12">
                     <div class="card-shadow h-333 br-14">
                         <div>
                             <img class="w-100" src="./assets/gun/shotgun.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">霰彈槍</div>
+                        <div class="fw-bloder fs-20 text-center pb-12 pt-12">霰彈槍</div>
                         <div class="fs-20 over-text">霰彈槍的特色：<br>
                             一次可射出多發子彈、適合中距離使用，因為太遠容易瞄不準。</div>
                     </div>
                 </div>
-                <div class="w-1/4 px-12">
+                <div class="w-1/4 pd-12">
                     <div class="card-shadow h-333 br-14 flex-wrap">
                         <div>
                             <img class="w-100" src="./assets/gun/edgel.png" alt="">
@@ -265,7 +268,7 @@
                             初速較低，所以多數場地限制一定距離內會要求切換手槍，適合短距離使用。</div>
                     </div>
                 </div>
-                <div class="w-1/4 px-12">
+                <div class="w-1/4 pd-12">
                     <div class="card-shadow h-333 br-14 flex-wrap">
                         <div>
                             <img class="w-100" src="./assets/gun/rpg.png" alt="">
