--- a/index.html
+++ b/index.html
@@ -7,159 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            line-height: 1;
-            font-family: 'Noto Sans TC', sans-serif;
-        }
-        a {
-            text-decoration: none;
-        }
-        header {
-            background-color: rgba(0, 255, 21, 0.253);
-        }
-        h1 {
-            padding: 0;
-            margin: 0;
-        }
-        h2 {
-            padding: 0;
-            margin: 0;
-        }
-        div {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            outline: 0;
-        }
-        li {
-            list-style: none;
-            border: 0;
-        }
-        ul {
-            padding: 0;
-            margin: 0;
-        }
-        .container {
-            width: 1320px;
-            margin-right: auto;
-            margin-left: auto;
-        }
-        .fw-bolder {
-            font-weight: bolder;
-        }
-        .cursor-pointer {
-            cursor: pointer;
-        }
-        .d-flex {
-            display: flex;
-        }
-        .py-12 {
-            padding-top: 12px;
-            padding-bottom: 12px;
-        }
-        .px-12 {
-            padding: 0 12px;
-        }
-        .mx-12 {
-            margin: 0 12px;
-        }
-        .align-items-center {
-            align-items: center;
-        }
-        .justify-content-between {
-            justify-content: space-between;
-        }
-        .text-color {
-            color: rgba(206, 5, 189, 0.808)
-        }
-        .under-line {
-            width: 100%;
-            height: 2px;
-            background-color: rgb(255, 136, 0);
-            transform: scaleX(0);
-            transition: all 0.3s;
-            transform-origin: left;
-        }
-        .under-line-wrapper:hover .under-line {
-            transform: scaleX(1);
-        }
-        .w-100 {
-            width: 100%;
-        }
-        .title {
-            font-size: 32px;
-            font-weight: bold;
-            text-align: center;
-            padding: 32px 0;
-        }
-        .border-radius-6 {
-            border-radius: 6px;
-        }
-        .overflow-hidden {
-            overflow: hidden;
-        }
-        .w-50 {
-            width: 50%;
-        }
-        .w-65 {
-            width: 65%;
-        }
-        .se2-text {
-            padding: 16px;
-            background-color: rgba(255, 255, 255, 0.70);
-            line-height: normal;
-        }
-        .se2-text-wrapper {
-            margin-left: -15%;
-            display: flex;
-            align-items: center;
-        }
-        .pb-8 {
-            padding-bottom: 8px;
-        }
-        .w-1\/4 {
-            width: 25%;
-        }
-        .fs-20 {
-            font-size: 20px;
-        }
-        .text-center {
-            text-align: center;
-        }
-        .card-shadow {
-            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-        }
-        .pb-12 {
-            padding-bottom: 12px;
-        }
-        .pd-12 {
-            padding: 12px;
-        }
-        .h-333 {
-            height: 333px;
-        }
-        .mxm-12 {
-            margin: -12px;
-        }
-        .over-text {
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            text-overflow: ellipsis;
-            -webkit-line-clamp: 4;
-        }
-        .br-14 {
-            border-radius: 14px;
-        }
-        .flex-wrap {
-            flex-wrap: wrap;
-        }
-    </style>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <header>
+    <header class="position-fixed">
         <div class="container d-flex align-items-center justify-content-between">
             <h1 class="py-12">
                 <img src="./assets/forg.png">
@@ -196,9 +47,9 @@
                 <div class="border-radius-6 overflow-hidden w-50">
                     <img class="w-100" src="./assets/IMG_4543 1.png">
                 </div>
-                <div class="w-65 se2-text-wrapper">
+                <div class="w-65 se2-text-wrapper overflow-hidden">
                     <div class="se2-text">
-                        <p style="text-align: justify;">
+                        <p class="over-text" style="height: 308px;">
                             生存遊戲是一種模擬軍事戰略的運動，是以使用BB彈作為子彈的模擬真槍射擊的多人遊戲。<br><br>
 
                             常見的場地有室內小型場地，又稱為「CQB 」是Close-Quarters Battle的簡寫，或者kill house<br>
@@ -218,89 +69,113 @@
         <h2 class="title">裝備介紹</h2>
         <div class="container">
             <div class="d-flex mxm-12 flex-wrap">
-                <div class="w-1/4 px-12">
-                    <div class="card-shadow h-333 br-14">
+                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
                             <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
-                        <div class="fs-20 over-text">衝鋒槍的特色：<br>
-                            射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
-                    </div>
-                </div>
-                <div class="w-1/4 px-12">
-                    <div class="card-shadow h-333 br-14">
-                        <div>
-                            <img class="w-100" src="./assets/gun/HK-.png" alt="">
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">步槍</div>
-                        <div class="fs-20 over-text">步槍的特色：<br>
-                            泛用型、適合中距離，亦可裝上各類瞄具，適合廣泛大眾使用。</div>
                     </div>
-                </div>
-                <div class="w-1/4 px-12">
-                    <div class="card-shadow h-333 br-14">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/SNIPE.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">狙擊槍</div>
-                        <div class="fs-20 over-text">狙擊槍的特色：<br>
-                            多為空氣動力、一拉一發、瞄準距離遠、不太適合新手使用。</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
-                </div>
-                <div class="w-1/4 pd-12">
-                    <div class="card-shadow h-333 br-14">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/shotgun.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12 pt-12">霰彈槍</div>
-                        <div class="fs-20 over-text">霰彈槍的特色：<br>
-                            一次可射出多發子彈、適合中距離使用，因為太遠容易瞄不準。</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
-                </div>
-                <div class="w-1/4 pd-12">
-                    <div class="card-shadow h-333 br-14 flex-wrap">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/edgel.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">手槍</div>
-                        <div class="fs-20 over-text">手槍的特色：<br>
-                            初速較低，所以多數場地限制一定距離內會要求切換手槍，適合短距離使用。</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
-                </div>
-                <div class="w-1/4 pd-12">
-                    <div class="card-shadow h-333 br-14 flex-wrap">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/rpg.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">RPG/投擲武器</div>
-                        <div class="fs-20 over-text">RPG/投擲武器特色：<br>
-                            場上不常見，多為娛樂效果使用，沒特別需要不建議購買。</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
-                </div>
-                <div class="w-1/4 px-12">
-                    <div class="card-shadow h-333 br-14 flex-wrap">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/mod.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">瞄具</div>
-                        <div class="fs-20 over-text">瞄具使用：<br>
-                            種類繁多，常見有類紅點、步槍鏡、RMR...等，可依據槍枝種類選配。</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
-                </div>
-                <div class="w-1/4 px-12">
-                    <div class="card-shadow h-333 br-14 flex-wrap">
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
                         <div>
-                            <img class="w-100" src="./assets/gun/vest.png" alt="">
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
                         </div>
-                        <div class="fw-bloder fs-20 text-center pb-12">防具</div>
-                        <div class="fs-20 over-text">防具：<br>
-                            部分部位防具強制配戴(護目鏡、護嘴)，其餘選配。<br>
-                            部分防具有增加彈匣配戴數量，具減少疼痛感及攝影...</div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
+                    </div>
+                </div>                <div class="w-1/4 mb-68 cursor-pointer">
+                    <div class="card-shadow h-333 br-14 mx-12">
+                        <div>
+                            <img class="w-100" src="./assets/gun/P-50.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <div class="fw-bloder fs-20 text-center pb-12">衝鋒槍</div>
+                            <div class="fs-20">衝鋒槍的特色：<br>射速快、子彈多、槍枝短小輕巧，適合喜歡首當其衝的人群使用。</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container d-flex align-items-center justify-content-between">
+            <div class="flow-grow">
+                <div class=" py-46 pl-54" style="width: 230px;">
+                    <img class="w-100" src="./assets/gun/logo.png" alt="">
+                </div>
+                <div style="background-color: rgba(217, 217, 217, 0.6);">
+                    <div class="pl-54">
+                        法律聲明：<br>
+                       <a class="text-black" href="https://edu.law.moe.gov.tw/LawContent.aspx?id=GL001911&KeyWord=%E6%A7%8D%E5%8F%A3%E5%8B%95%E8%83%BD%E4%BA%8C%E7%84%A6%E8%80%B3"> 槍口動能二焦耳以下低動能遊戲用槍活動注意事項</a>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-col align-items-center flex-shrink">
+                <div class="py-24">
+                    <img src="./assets/gun/CQB.png" alt="">
+                </div>
+                <div style="background-color: rgba(217, 217, 217, 0.6);">
+                    <br>
+                    特別感謝　公園CQB　協助拍攝
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
