--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
     </section>
     <footer>
-        <div class="container d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center justify-content-between">
             <div class="flow-grow">
                 <div class=" py-46 pl-54" style="width: 230px;">
                     <img class="w-100" src="./assets/gun/logo.png" alt="">
